WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
176052
REGRESSION(
r221064
): [GTK] Editor not correctly working after
r221064
https://bugs.webkit.org/show_bug.cgi?id=176052
Summary
REGRESSION(r221064): [GTK] Editor not correctly working after r221064
Carlos Garcia Campos
Reported
2017-08-29 06:43:05 PDT
Since
r221064
we are not always notified about typing attributes when editor state changes. didChangeSelection no longer includes the typing attributes in EditorStateChange message, it's scheduled to be sent after the compositing layer have been flushed, but that part is not implemented for GTK+ port. This is causing test /webkit2/WebKitWebView/editor-state/typing-attributes to time out.
Attachments
Patch
(5.86 KB, patch)
2017-08-29 06:48 PDT
,
Carlos Garcia Campos
mcatanzaro
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Carlos Garcia Campos
Comment 1
2017-08-29 06:48:37 PDT
Created
attachment 319252
[details]
Patch
Carlos Garcia Campos
Comment 2
2017-08-30 00:00:08 PDT
Committed
r221344
: <
http://trac.webkit.org/changeset/221344
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug