REGRESSION(r221064): [GTK] Editor not correctly working after r221064 https://bugs.webkit.org/show_bug.cgi?id=176052

Reviewed by Michael Catanzaro.

Source/WebKit:

Since r221064 we are not always notified about typing attributes when editor state changes. didChangeSelection
no longer includes the typing attributes in EditorStateChange message, it's scheduled to be sent after the
compositing layer have been flushed, but that part is not implemented for GTK+ port.

Fixes test /webkit2/WebKitWebView/editor-state/typing-attributes.

* WebProcess/WebPage/AcceleratedDrawingArea.cpp:
(WebKit::AcceleratedDrawingArea::updateBackingStoreState): Call WebPage::flushPendingEditorStateUpdate() after
the layout.
* WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp:
(WebKit::CoordinatedLayerTreeHost::layerFlushTimerFired): Call WebPage::flushPendingEditorStateUpdate() after
the display sync.
* WebProcess/WebPage/DrawingAreaImpl.cpp:
(WebKit::DrawingAreaImpl::display): Call WebPage::flushPendingEditorStateUpdate() after the layout.
* WebProcess/WebPage/gtk/WebPageGtk.cpp:
(WebKit::WebPage::platformEditorState const): Also return early, setting isMissingPostLayoutData to true, when
there's no frame view, the view needs a layout or the result is not for editable content.

Tools:

Run the test inside a window to ensure display updates happen.

* TestWebKitAPI/Tests/WebKitGtk/TestWebViewEditor.cpp:
(testWebViewEditorEditorStateTypingAttributes):

Canonical link: https://commits.webkit.org/192771@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221344 268f45cc-cd09-0410-ab3c-d52691b4dbfc