Source/WebKit/WebProcess/WebPage/CoordinatedGraphics/CoordinatedLayerTreeHost.cpp
@@ -192,6 +192,7 @@ void CoordinatedLayerTreeHost::layerFlushTimerFired()
         return;
 
     m_coordinator.syncDisplayState();
+    m_webPage.flushPendingEditorStateUpdate();
 
     if (!m_isValid || !m_coordinator.rootCompositingLayer())
         return;
