Source/WebKit/WebProcess/WebPage/DrawingAreaImpl.cpp
@@ -400,6 +400,7 @@ void DrawingAreaImpl::display(UpdateInfo& updateInfo)
     ASSERT(!m_webPage.size().isEmpty());
 
     m_webPage.layoutIfNeeded();
+    m_webPage.flushPendingEditorStateUpdate();
 
     // The layout may have put the page into accelerated compositing mode. If the LayerTreeHost is
     // in charge of displaying, we have nothing more to do.
